bundled_pjproject:  Add tests for programs used by the Makefile, et al.
Added tests for sed, tar, bzip2, patch and nm.

The tarball is now downloaded to the externals_cache_dir if it was
specified on the ./configure command line

Removed regeneration of the pjproject aconfigure file.  It was only
needed for an old patch that no longer applies.

Converted the tests for symbols to explicit tests since we know that
they're now available in the bundled version.  Saves a little time
during configure.

Fixed third-party/Makefile.rules to properly set TAR, PATCH, SED
and NM if not already set and fixed the logic that adds options to
DOWNLOAD.

ASTERISK-26416 #close
Reported-by: Corey Farrell

Change-Id: Id1d94251c0155f8dd41b7de7067f35cfbaafbb9b

--- a/configure.ac
+++ b/configure.ac
@@ -284,6 +284,12 @@ AC_PATH_PROG([XMLSTARLET], [xmlstarlet], :)
 AC_PATH_PROG([BASH], [bash], :)
 AC_PATH_PROG([GIT], [git], :)
 AC_PATH_PROG([ALEMBIC], [alembic], :)
+AC_PATH_PROG([BZIP2], [bzip2], :)
+AC_PATH_PROG([TAR], [tar], :)
+AC_PATH_PROG([PATCH], [patch], :)
+AC_PATH_PROG([SED], [sed], :)
+AC_PATH_PROG([NM], [nm], :)
+
 if test "${WGET}" != ":" ; then
   DOWNLOAD=${WGET}
 else if test "${CURL}" != ":" ; then
